--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-1   <html>
-2     <h1>Meu primeiro arquivo em HTML</h1>
-3   </html> 
+ <html>
+    <h1>Meu primeiro arquivo em HTML</h1>
+ </html> 
